# ICD

./: .gitignore  README.md  clustering_for_sampling.py  devenv.nix  devenv.yaml  main.py  pyproject.toml  utils.py
dataset/: housing_stratified.csv
ep2/: clustering_for_sampling.py  main.py
ep3/: analysis.py  main.py  output.txt
scripts/: json_tables_to_latex.py
tables/: dados_transformados_estatisticas_descritivas_1o quartil.json  dados_transformados_estatisticas_descritivas_1º quartil.json  dados_transformados_estatisticas_descritivas_3o quartil.json  dados_transformados_estatisticas_descritivas_3º quartil.json  dados_transformados_estatisticas_descritivas_Amplitude.json  dados_transformados_estatisticas_descritivas_Desvio Padrão.json  dados_transformados_estatisticas_descritivas_Distância interquartil.json  dados_transformados_estatisticas_descritivas_Frequência Absoluta de Outliers.json  dados_transformados_estatisticas_descritivas_Frequência Relativa de Outliers (%).json  dados_transformados_estatisticas_descritivas_Mediana.json  dados_transformados_estatisticas_descritivas_Máximo.json  dados_transformados_estatisticas_descritivas_Média Aritmética.json  dados_transformados_estatisticas_descritivas_Quantidade de Observações não nulas.json  dados_transformados_estatisticas_descritivas_Quantidade de Observações.json  dados_transformados_estatisticas_descritivas_Quantidade de Valores Nulos.json  dados_transformados_observacoes_com_algum_valor_null_ou_nan.json  estatisticas_descritivas_1o quartil.json  estatisticas_descritivas_1º quartil.json  (+23 more)
(+26 files in other folders)
