[project]
name = "icd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas[all]>=1.1.3",
    "joblib>=1.5.3",
    "polars[all]>=1.40.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn[stats]>=0.13.2",
    "types-geopandas>=1.1.3.20260508",
    "types-seaborn>=0.13.2.20260509",
    "vl-convert-python>=1.9.0.post1",
]

[tool.pyrefly]
preset = "strict"
python-version = "3.14"
project-includes = ["ep2/**/*.py", "ep3/**/*.py", "utils.py"]
min-severity = "info"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PIE", "RUF", "PERF", "PLE", "PLW"]
